# thi_robothix_grand_challenge

./: .gitignore  README.md  rviz_config.rviz
box_description/: CMakeLists.txt  package.xml
box_description/meshes/: BoxV1_ohne_KabelUndLS v2.dae:Zone.Identifier  slider.stl
box_description/urdf/: box.urdf  box.urdf.xacro
box_position_publisher/: CMakeLists.txt  package.xml
box_position_publisher/scripts/: box_position_publisher_node.py  origin_from_3_points.py
sw_tools/: angles_to_plane.py  origin_from_3_points.py
tcp_position_publisher/: CMakeLists.txt  package.xml
tcp_position_publisher/scripts/: tcp_position_publisher_node.py
thi_robothix_grand_challenge/: CMakeLists.txt  package.xml
thi_robothix_grand_challenge/config/: usb_cam.yaml
thi_robothix_grand_challenge/dyi/: dyi_node.cpp  thank_you.csv
thi_robothix_grand_challenge/include/thi_robothix_grand_challenge/: moveit_interface.hpp  pilz_moveit_inteface.hpp  task_parent_class.hpp  tasks.hpp
thi_robothix_grand_challenge/launch/: 3dpose.launch  debug_view.launch  exec.launch  franka.launch  meta.launch  pick_and_place.launch  pick_and_place_lsg.launch  sim.launch  speed_test.launch  usb_cam.launch
thi_robothix_grand_challenge/scripts/: battery_detection.py  box_aprox_detection.py  box_aprox_detection_V2.py  find_box_aprox.py  read_display.py  target_second_arrow_V2.py
thi_robothix_grand_challenge/src/: approach_marker.cpp  detect_box.cpp  detect_touch_node.cpp  force_interaction.cpp  pc_filter.cpp  pick_and_place.cpp  pick_and_place_lsg.cpp  press_button.cpp  speed_test_node.cpp  tf_tcp_probe_broadcaster.cpp  thi_robothix_grand_challenge.code-workspace  thi_robothix_grand_challenge_node.cpp  thi_robothix_grch_diy_node.cpp
